First Release Version
Support for Hubitat Elevation devices exposed via MQTT
Hybrid direct support for Tasmota Athome UK plugs via MQTT

--- a/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat.xml
+++ b/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat.xml
@@ -8,7 +8,7 @@
     </Field>
     <Field id="space-T1" type="label" alwaysUseInDialogHeightCalc="true"><Label/></Field>
 
-    <Field id="hubitatHubId" type="menu"  default="0" alwaysUseInDialogHeightCalc="true">
+    <Field id="hubitatHubName" type="menu"  default="" alwaysUseInDialogHeightCalc="true">
         <Label>Hubitat Hub:</Label>
         <List class="self" method="listHubitatHubs" dynamicReload="true"/>
         <CallbackMethod>listHubitatHubSelected</CallbackMethod>
