--- a/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat_device_properties.xml
+++ b/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat_device_properties.xml
@@ -63,7 +63,7 @@
     <Field id="space-header-uspAcceleration" type="label"
            visibleBindingId="hubitatPropertyAcceleration" visibleBindingValue="true"><Label/></Field>
     <Field id="header-uspAcceleration" type="label" alwaysUseInDialogHeightCalc="true" fontColor="orange"
-            visibleBindingId="hubitatPropertyAcceleration" visibleBindingValue="true">>
+            visibleBindingId="hubitatPropertyAcceleration" visibleBindingValue="true">
         <Label>Acceleration</Label>
     </Field>
     <Field id="uspAcceleration" type="checkbox" defaultValue="false"
