--- a/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat_mqtt.xml
+++ b/Hubitat.indigoPlugin/Contents/Server Plugin/Templates/template_hubitat_mqtt.xml
@@ -41,7 +41,7 @@
     <Field id="space-header-uspHsm" type="label"
            visibleBindingId="hubitatPropertyHsm" visibleBindingValue="true"><Label/></Field>
     <Field id="header-uspHsm" type="label" alwaysUseInDialogHeightCalc="true" fontColor="orange"
-            visibleBindingId="hubitatPropertyHsm" visibleBindingValue="true">>
+            visibleBindingId="hubitatPropertyHsm" visibleBindingValue="true">
         <Label>HSM</Label>
     </Field>
     <Field id="uspHsm" type="checkbox" defaultValue="false"
